--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-spinners": "^0.13.8",
-    "react-window": "^1.8.10"
+    "react-window": "^1.8.10",
+    "swiper": "^11.1.12"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
