--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.23.1",
     "react-spinners": "^0.13.8",
     "react-window": "^1.8.10",
+    "socket.io-client": "^4.7.5",
     "swiper": "^11.1.12"
   },
   "devDependencies": {
