--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-range": "^1.10.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-select": "^5.8.2",
     "react-window": "^1.8.10",
     "socket.io-client": "^4.7.5",
     "swiper": "^11.1.12",
